udev 167
========
Bugfixes.

udev 166
========
Bugfixes.

New and updated keymaps.

udev 165
========
Bugfixes.

The udev database has changed, After installation of a new udev
version, 'udevadm info --convert-db' should be called, to let the new
udev/libudev version read the already stored data.

udevadm now supports quoting of property values, and prefixing of
key names:
  $ udevadm info --export --export-prefix=MY_ --query=property -n sda
  MY_MAJOR='259'
  MY_MINOR='0'
  MY_DEVNAME='/dev/sda'
  MY_DEVTYPE='disk'
  ...

libudev now supports:
  udev_device_get_is_initialized()
  udev_enumerate_add_match_is_initialized()
to be able to skip devices the kernel has created , but udev has
not already handled.

libudev now supports:
  udev_device_get_usec_since_initialized()
to retrieve the "age" of a udev device record.

GUdev supports a more generic GUdevEnumerator class, udev TAG
handling, device initialization and timestamp now.

The counterpart of /sys/dev/{char,block}/$major:$minor,
/dev/{char,block}/$major:$minor symlinks are now unconditionally
created, even when no rule files exist.

New and updated keymaps.

udev 164
========
Bugfixes.

GUdev moved from /usr to /.

udev 163
========
Bugfixes.

udev 162
========
Bugfixes.

Persistent network naming rules are disabled inside of Qemu/KVM now.

New and updated keymaps.

Udev gets unconditionally enabled on systemd installations now. There
is no longer the need to to run 'systemctl enable udev.service'.

udev 161
========
Bugfixes.

udev 160
========
Bugfixes.

udev 159
========
Bugfixes.

New and fixed keymaps.

Install systemd service files if applicable.

udev 158
========
Bugfixes.

All distribution specific rules are removed from the udev source tree,
most of them are no longer needed. The Gentoo rules which allow to support
older kernel versions, which are not covered by the default rules anymore
has moved to rules/misc/30-kernel-compat.rules.

udev 157
========
Bugfixes.
